# hospital-search

./: .env.docker.rc  Dockerfile  Makefile  README.md  alembic.ini  create_db.py  docker-compose.yaml  dummy_data.json  hospital-search.json  pyproject.toml  ruff.toml  seed_db.py
db-init-scripts/: install-pg-vector.sh
deploy/: run-server.sh
migrations/: env.py
migrations/versions/: 300ecf9e92ae_first_migration.py  472d44117e8e_added_extra_index.py  b1efe4dbd05e_adding_index.py
src/: helper.py
src/app/: __init__.py
src/app/routers/: note_router.py  patient_router.py  public_router.py
src/database/: __init__.py  models.py
src/exceptions/: db_exceptions.py  other_exceptions.py  request_exceptions.py
src/repo/: note_repo.py  patient_repo.py
src/schemas/: note_schema.py  patient_schema.py
src/services/: embedding_model.py  note_service.py  patient_service.py  semantic_search.py
