[project]
name = "hospital-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.2",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy[asyncio]>=2.0.43",
]
